add minimum HeroViewGUI